--- a/418-Project.ipynb
+++ b/418-Project.ipynb
@@ -1441,6 +1441,7 @@
    "cell_type": "markdown",
    "id": "eacd1520-c83f-437a-afc7-66fa20ce1f1a",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2738,6 +2739,7 @@
    "cell_type": "markdown",
    "id": "f4f8e78a-0b69-44f3-9d9b-df437babf83a",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -4053,6 +4055,7 @@
    "cell_type": "markdown",
    "id": "ec13f511-8ea0-4f0a-8c1b-f08b957801c6",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -6774,7 +6777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
