updated project requirements

--- a/Viz_Sourabh.ipynb
+++ b/Viz_Sourabh.ipynb
@@ -464,13 +464,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c63dbaff-3b52-4a00-982c-97c303723f82",
    "metadata": {},
    "source": [
     "This indicates that both the cost and kwh usage are indicating usage of electricity and the only difference between is the scale (a multiplicative factor). \n",
     "\n",
-    "Therfore, analyzing just the kwh usage or just the price might be enough and both should be used in predictive tasks, i.e., if we are predicting kwh usage then price should not be present in the train dataset, as these two are different representations of the same thing which is usage."
+    "Therefore, analyzing just the kwh usage or just the price might be enough and both should be used in predictive tasks, i.e., if we are predicting kwh usage then price should not be present in the train dataset, as these two are different representations of the same thing which is usage."
    ]
   }
  ],
